create home page

--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -5523,25 +5523,7 @@ a.navi {
     width: 15px;
     height: 15px;
 }
-.banner-slider .banner-info h1 {
-    color: #fff;
-    text-transform: uppercase;
-    font-family: "Oswald";
-    letter-spacing: 7px;
-    font-size: 48px;
-    font-weight: 700;
-    margin-bottom: 20px;
-    margin-top: 30px;
-}
-.banner-slider .banner-info p {
-    color: #fff;
-    text-transform: uppercase;
-    font-family: "Oswald";
-    letter-spacing: 7px;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 33px;
-}
+
 .banner-1 .banner-info a {
     font-size: 18px;
     font-weight: 700;
@@ -16125,3 +16107,38 @@ cursor: pointer;
     border: 2px solid #179443;
     color: #fff;
 }
+
+
+/* Home Page */
+
+.vc_home_title_banner {
+    font-weight: 900;
+    line-height: 56px;
+    margin-bottom: 20px;
+    margin-top: 0;
+    color: #fff;
+}
+
+.vc_home_text_banner {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 41px;
+    color: #fff;
+    margin-bottom: 35px;
+}
+
+.vc_home_banner_btn button {
+    background: initial;
+    color: #fff;
+    font-size: 14px;
+    height: 42px;
+    padding: 0 24px !important;
+    margin-right: 25px;
+}
+
+.vc_home_banner_btn button:hover {
+    color: #303188;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
+/* End Home Page */
