--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -16867,3 +16867,88 @@ body.home {
     font-weight: bold;
 }
 /* end page product */
+
+
+.vc_f_title_logo {
+    font-size: 8px;
+    color: #fff;
+    margin-top: 20px;
+}
+#footer .footer-text-title {
+    font-weight: 700;
+}
+
+#footer a.footer-text-content {
+    margin-top: 10px;
+}
+
+.vc_f_box_text1 {
+	padding-left: 100px;
+}
+.vc_f_box_text2 {
+padding-left: 15px;
+}
+
+.vc_f_box_text3 {
+width: 127%;
+    margin-left: -69px;
+}
+#footer-page {
+    border-top: 5px solid #F47321;
+}
+#footer .copy-right {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 20px 0px;
+justify-content: initial;
+}
+
+.vc_f_hotline {
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 700;
+}
+
+.vc_f_link {
+    border: 1px solid #EC702D;
+    color: #EC702D;
+    font-weight: 700;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 5px 19px;
+    margin-left: 15px;
+}
+#footer .copy-right-content {
+    margin-left: 15px;
+}
+.vc_f_title_lang {
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.2px;
+    color: #BBBCEE;
+    position: absolute;
+    right: 93px;
+}
+#footer .copy-right {
+position: relative;
+}
+
+#footer .copy-right p:last-child {
+	position: absolute;
+    right: 0;
+}
+#footer .copy-right a.vc_f_btn {
+font-weight: 900;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.2px;
+color: #FFFFFF;
+}
+.vc_f_btn.first {
+margin-right: 13px;
+    padding-right: 12px;
+    border-right: 1px solid #BBBCEE;
+}
+
+a.vc_f_link:hover {
+	color: #ffffff;
+}
