--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -17151,3 +17151,70 @@ font-size: 14px;
     margin-top: 148px;
     margin-left: 120px;
 }
+.vc_sanpham_tab ul {
+list-style: none;
+    padding: 0;
+position: relative;
+}
+.vc_sanpham_tab ul li {
+    display: inline-block;
+font-weight: bold;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.1px;
+color: #373F41;
+    vertical-align: top;
+    padding-right: 30px;
+    margin-right: 10px;
+    padding-left: 5px;
+    padding-bottom: 3px;
+    min-height: 48px;
+}
+.vc_sanpham_tab ul li.active {
+color: #EC702D;
+    border-bottom: 4px solid #EC702D;
+    z-index: 2;
+    position: relative;
+}
+.vc_sanpham_tab ul::after {
+content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #EEEEEE;
+}
+.vc_page_products {
+    padding: 0;
+    background: #ffffff;
+}
+.vc_page_products .item-product {
+    border-radius: 0;
+}
+.vc_page_products .item-product .product-info {
+    padding-right: 0;
+    padding-left: 0;
+}
+.vc_page_products .item-product .product-info .product-title {
+font-weight: bold;
+font-size: 18px;
+line-height: 24px;
+letter-spacing: 0.1px;
+color: #383388;
+}
+.vc_attribute_product .vc_attribute_name, .vc_page_products .vc_attribute_options {
+    font-weight: 200;
+font-size: 14px;
+line-height: 20px;
+letter-spacing: 0.2px;
+color: #373F41;
+}
+
+.vc_page_products .item-product .product-info p {
+    margin-bottom: 9px;
+}
+.vc_sanpham_tab ul li.vc_sp_khac {
+height: 50px;
+}
