--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -2553,7 +2553,7 @@ body.page-content-box [data-vc-full-width] [data-vc-full-width]{
 } 
 100% { 
     transform: translate(0,0) rotate(-180deg);
-    -webkit-transform: rtranslate(0,0) rotate(-180deg);
+    -webkit-transform: translate(0,0) rotate(-180deg);
 }
 }
 
@@ -17256,4 +17256,82 @@ position: relative
 content: "";
     display: table;
     clear: both;
+}
+.vc_slider_custom .item-image-list-slider {
+    margin-left: -10px;
+    width: calc(10px + 100%);
+}
+.vc_slider_custom .item-image-list-slider img {
+    width: 96%;
+}
+.vc_slider_custom .owl-theme .owl-controls .owl-buttons div.owl-prev {
+    width: 37px;
+    height: 71px;
+    border-radius: 0;
+    border: none;
+    left: 12px;
+    background: rgba(0, 0, 0, 0.7);
+    top: 43%;
+}
+.vc_slider_custom .owl-theme .owl-controls .owl-buttons div.owl-prev i {
+    margin-top: 8px;
+}
+.vc_slider_custom .owl-theme .owl-controls .owl-buttons div.owl-next {
+    width: 37px;
+    height: 71px;
+    border-radius: 0;
+    border: none;
+    right: 0px;
+    background: rgba(0, 0, 0, 0.7);
+    top: 43%;
+}
+.vc_slider_custom .owl-theme .owl-controls .owl-buttons div.owl-next i {
+    margin-top: 8px;
+}
+.vc_tab_duan .titleh3-tab > li:hover,.vc_tab_duan .title-tab > li.active,.vc_tab_duan .title-tab > li:hover,
+.vc_tab_duan .title-tab > li.active, .vc_tab_duan .title-tab > li {
+    background: none;
+}
+.vc_tab_duan .title-tab > li a {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    text-transform: uppercase;
+    color: #373F41;
+}
+.vc_tab_duan .title-tab > li:hover a.navi,.vc_tab_duan .title-tab > li.active a.navi {
+    color: #EC702D;
+}
+.vc_tab_duan .title-tab > li {
+    padding: 8px 14px 8px;
+    margin: 0 2px;
+}
+.vc_tab_duan .title-tab > li {
+    border-bottom: 4px solid #fff;
+}
+.vc_tab_duan .title-tab > li.active {
+    border-bottom: 4px solid #EC702D;
+    z-index: 2;
+    position: relative;
+}
+
+.vc_tab_duan ul.title-tab {
+    position: relative;
+}
+.vc_tab_duan ul.title-tab::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #EEEEEE;
+}
+.vc_attribute_product .vc_attribute_name, .vc_page_products .vc_attribute_options {
+    font-weight: 400;
+}
+.footer-page {
+    border-top: 5px solid #F47321;
 }
